# alvz

./: .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ESPECIFICACION.md  LICENSE  README.md  _check_bc.py  _check_byte.py  _check_locals.py  _debug_wasm.py  _find_handler.py  _find_handler2.py  _test_locals.py  _test_wasm_validation.py  alvz.bat  alvz.py  conectar_supabase.alvz  crear_mi_web.alvz  demo.alvz  ejecutar.bat  ejemplo_para_cada.alvz  ejercicio_sencillo.alvz  fast.alvz  firebase.json  generar_pagina_pro.alvz  gestor_tareas.alvz  index.alvz  index.html  inicio.alvz  instalar.py  juego_adivinar.alvz  menu.alvz  mi_api.alvz  mi_pagina.html  programa.alvz  propia.alvz  prueba_nube.alvz  pyproject.toml  (+15 more)
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: tests.yml
alv/core/: lexer.py
alvz/: __init__.py  repl.py
alvz-extension/: .vscodeignore  README.md  alvz-language-1.1.0.vsix  alvz-language-1.2.0.vsix  alvz-language-1.3.0.vsix  alvz-language-1.4.0.vsix  alvz-language-1.5.0.vsix  alvz-language-1.6.0.vsix  alvz-language-1.6.1.vsix  extension.js  icon-theme.json  package.json
alvz-extension/snippets/: snippets.json
alvz-extension/syntaxes/: alvz.tmLanguage.json
alvz-packages/: index.json
alvz-packages/http/: http.alvz  package.json
alvz-packages/json/: json.alvz  (+1 more)
curso_alvz/: eder.alvz  ejemplo.alvz  glosario.md  leccion1.alvz  leccion2.alvz  leccion_1.md  leccion_2.md  leccion_3.md  leccion_4.md  leccion_5.md
public/: index.html
tests/: conftest.py  test_benchmarks.py  test_bytecode.py  test_compiler.py  test_dap.py  test_errors.py  test_fixer.py  test_formatter.py  test_integration.py  test_lexer.py  test_lsp.py  test_new_stdlib_modules.py  test_package_manager.py  test_parser.py  test_types.py  test_vm.py  test_wasm_compiler.py  test_wasm_runtime.py
(+51 files in other folders)
