[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alvz-lenguaje"
version = "0.18.0"
description = "Lenguaje de programacion con sintaxis completamente en espanol"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"

authors = [
    {name = "Eder Alvarez", email = "alvz-lenguaje@proton.me"}
]

keywords = ["lenguaje", "espanol", "programacion", "spanish", "language", "alvz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.optional-dependencies]
wasm = ["wasmtime>=45"]
web = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7", "ruff>=0.1"]
all = ["wasmtime>=45", "fastapi>=0.100", "uvicorn>=0.20"]

[project.urls]
Homepage = "https://alvzes.web.app"
Repository = "https://github.com/interpago/alvz"
Documentation = "https://alvzes.web.app"
"VS Code Marketplace" = "https://marketplace.visualstudio.com/items?itemName=alvz-project.alvz-language"

[project.scripts]
alvz = "alvz:main"
alvz-lsp = "alvz.lsp.server:main"
alvz-dap = "alvz.lsp.dap:main"

[tool.setuptools.packages.find]
include = ["alvz*"]

[tool.setuptools.package-data]
alvz = ["stdlib/*.alvz"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
